--- a/style/all.css
+++ b/style/all.css
@@ -10,8 +10,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   box-sizing: border-box;
-  background-color: gray;
-  /* overflow: hidden; */
 }
 
 h1, h2, h3, h4, h5, h6 {margin: 0; padding: 0;}
@@ -166,4 +164,10 @@ small {font-size: 14px;}
   100% {
     transform: translateX(-100%);
   }
+}
+
+.advocate {
+  background-color: #F7ECE1;
+  height: 752px;
+  padding: 0 300px;
 }
