--- a/style/all.css
+++ b/style/all.css
@@ -189,7 +189,7 @@ img {
   color: white;
   background-color: #DA7D4A;
   white-space: nowrap; 
-  /* animation: marquee 15s linear infinite;  */
+  animation: marquee 15s linear infinite; 
   display: inline-block;
   padding: 10px;
 }
@@ -300,7 +300,7 @@ img {
         > * + * {
           padding-top: 24px;
         }
-        
+
         & .event {
           gap: 16px;
 
